[tool.poetry]
name = "isiflask-core"
version = "0.1.0"
description = ""
authors = ["David De Los Santos Cuy Sánchez <david.cuy.sanchez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
